--- a/frontend/user/templates/user_base.html
+++ b/frontend/user/templates/user_base.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends "shared/base.html" %}
 
 {# ========================================================= #}
 {# USER BASE TEMPLATE                                         #}
-{# Extends: app base layout                                   #}
+{# Extends: shared app base layout                            #}
 {# Purpose: User-only sidebar & structure                     #}
 {# ========================================================= #}
 
