--- a/frontend/user/templates/user_base.html
+++ b/frontend/user/templates/user_base.html
@@ -1,4 +1,4 @@
-{% extends "shared/base.html" %}
+{% extends "shared/templates/base.html" %}
 
 {# ========================================================= #}
 {# USER BASE TEMPLATE                                         #}
