--- a/frontend/shared/templates/login.html
+++ b/frontend/shared/templates/login.html
@@ -1,4 +1,4 @@
-{% extends "auth_base.html" %}
+{% extends "shared/templates/auth_base.html" %}
 
 {% block title %}Login | Digital Growth Studio{% endblock %}
 
