--- a/frontend/user/templates/settings.html
+++ b/frontend/user/templates/settings.html
@@ -1,4 +1,4 @@
-{% extends "user_base.html" %}
+{% extends "user/templates/user_base.html" %}
 
 {% block title %}Settings | Digital Growth Studio{% endblock %}
 
